--- a/public/stats.html
+++ b/public/stats.html
@@ -14,11 +14,12 @@
     <title>Fitness Chart</title>
   </head>
   <nav>
-    <a href="/">Fitness Tracker</a>
+    <a href="/">Home</a>
   </nav>
   <body>
     <div class="container mt">
       <h1 class="text-center">Workout Dashboard</h1>
+      <div class="jumbotron">
       <div class="row mt">
         <div class="col-md-6">
           <canvas id="canvas"></canvas>
@@ -35,6 +36,7 @@
           <canvas id="canvas4"></canvas>
         </div>
       </div>
+    </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <script src="javascript/api.js"></script>
