--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,18 @@
   <script src="/javascript/api.js"></script>
   <script src="/javascript/workout.js"></script>
   <script src="/javascript/index.js"></script>
+
+  <script>
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', () => {
+        navigator.serviceWorker.register('service-worker.js')
+          .then((reg) => {
+            console.log('We found your service worker file!', reg);
+          });
+      });
+    }
+  </script>
+  
 </body>
 
 </html>
